--- a/src/maskrcnn/ann.maskrcnn.train/ann.maskrcnn.train.html
+++ b/src/maskrcnn/ann.maskrcnn.train/ann.maskrcnn.train.html
@@ -7,39 +7,47 @@ dataset.
 
 Training dataset should be in the following structure:
 
-<div class="code"><pre>
+<p>
 dataset-directory
-│
-└─── imagenumber
-│       │   imagenumber.jpg (training image)
-│       │   imagenumber-class1-number.png (mask for one instance of class1)
-│       │   imagenumber-class1-number.png (mask for another instance of class1)
-│       │   ...
-│
-└─── imagenumber2
-        │   imagenumber2.jpg
-        │   imagenumber2-class1-number.png (mask for one instance of class1)
-        │   imagenumber2-class2-number.png (mask for another class instance)
-        │   ...
-</pre></div>
+     <ul>
+        <li>imagenumber
+	 <ul>
+          <li>imagenumber.jpg (training image)</li>
+          <li>imagenumber-class1-number.png (mask for one instance of class1)</li>
+          <li>imagenumber-class1-number.png (mask for another instance of class1)</li>
+          <li>...</li>
+	 </ul>
+	  </li>
+	<li>imagenumber2
+	 <ul>
+            <li>imagenumber2.jpg</li>
+	    <li>imagenumber2-class1-number.png (mask for one instance of class1)</li>
+	    <li>imagenumber2-class2-number.png (mask for another class instance)</li>
+	    <li>...</li>
+	 </ul>
+     </ul>
 
+<p>
 For example:
 
-<div class="code"><pre>
+<p>
 crops
-│
-└─── 000000
-│       │   000000.jpg
-│       │   000000-corn-0.png
-│       │   000000-corn-1.png
-│       │   ...
-│
-└─── 000001
-        │   000001.jpg
-        │   000001-corn-0.png
-        │   000001-rice-0.png
-        │   ...
-</pre></div>
+     <ul>
+        <li>000000
+         <ul>
+          <li>000000.jpg</li>
+          <li>000000-corn-0.png</li>
+          <li>000000-corn-1.png</li>
+          <li>...</li>
+         </ul>
+          </li>
+        <li>000001
+         <ul>
+            <li>000001.jpg</li>
+            <li>000001-corn-0.png</li>
+            <li>000001-rice-0.png</li>
+            <li>...</li>
+         </ul>
 
 <h2>SEE ALSO</h2>
 
