divide training to three segments only when using init weights

--- a/src/maskrcnn/ann.maskrcnn.train/ann.maskrcnn.train.html
+++ b/src/maskrcnn/ann.maskrcnn.train/ann.maskrcnn.train.html
@@ -35,10 +35,10 @@ object should be provided separately distinguished by the suffix number.
 
 <h2>NOTES</h2>
 <p>
-Epochs are divided into three segments. Firstly training layers 5+, then
-fine-tuning layers 4+ and the last segment is fine-tuning the whole
-architecture. Ending number of epoch is shown for your segment, not for
-the whole training.
+If you are using initial weights (the model parameter), epochs are divided into
+three segments. Firstly training layers 5+, then fine-tuning layers 4+ and
+the last segment is fine-tuning the whole architecture.
+Ending number of epoch is shown for your segment, not for the whole training.
 
 <h2>EXAMPLES</h2>
 
