--- a/src/maskrcnn/ann.maskrcnn.train/ann.maskrcnn.train.html
+++ b/src/maskrcnn/ann.maskrcnn.train/ann.maskrcnn.train.html
@@ -9,36 +9,58 @@ Training dataset should be in the following structure:
 
 <p>
 dataset-directory
-     <ul>
-        <li>imagenumber
-	 <ul>
+    <ul>
+      <li>imagenumber
+	  <ul>
           <li>imagenumber.jpg (training image)</li>
           <li>imagenumber-class1-number.png (mask for one instance of class1)</li>
           <li>imagenumber-class1-number.png (mask for another instance of class1)</li>
           <li>...</li>
-	 </ul>
+	  </ul>
 	  </li>
-	<li>imagenumber2
-	 <ul>
-            <li>imagenumber2.jpg</li>
-	    <li>imagenumber2-class1-number.png (mask for one instance of class1)</li>
-	    <li>imagenumber2-class2-number.png (mask for another class instance)</li>
-	    <li>...</li>
-	 </ul>
-     </ul>
+	  <li>imagenumber2
+	  <ul>
+         <li>imagenumber2.jpg</li>
+	     <li>imagenumber2-class1-number.png (mask for one instance of class1)</li>
+	     <li>imagenumber2-class2-number.png (mask for another class instance)</li>
+	     <li>...</li>
+      </ul>
+    </ul>
 
 <p>
 The described structure of directories is required. Pictures must be *.jpg
 files with 3 channels (for example RGB), masks must be *.png files consisting
-of 255s (object instance) and 0s (elsewhere). A mask file for each instance of
-object should be provided separately distinguished by the suffix number.
+of numbers between 1 and 255 (object instance) and 0s (elsewhere). A mask file
+for each instance of object should be provided separately distinguished by
+the suffix number.
 
 <h2>NOTES</h2>
 <p>
-If you are using initial weights (the model parameter), epochs are divided into
-three segments. Firstly training layers 5+, then fine-tuning layers 4+ and
-the last segment is fine-tuning the whole architecture.
+If you are using initial weights (the <em>model</em> parameter), epochs are
+divided into three segments. Firstly training layers 5+, then fine-tuning
+layers 4+ and the last segment is fine-tuning the whole architecture.
 Ending number of epoch is shown for your segment, not for the whole training.
+
+<p>
+The usage of the <em>-b</em> flag will result in an activation of batch
+normalization layers training. By default, this option is set to False, as it
+is not recommended to train them when using just small batches (batch is
+defined by the <em>images_per_gpu</em> parameter).
+
+<p>
+If the dataset consists of images of the same size, the user may use the
+<em>-n</em> flag to avoid resizing or padding of images. When the flag is not
+used, images are resized to have their longer side equal to the value of the
+<em>images_max_dim</em> parameter and the shorter side longer or equal to the
+value of the <em>images_min_dim</em> parameter and zero-padded to be of shape
+<div class="code">images_max_dim x images_max_dim</div>. It results in the fact
+that even images of different sizes may be used.
+
+<p>
+After each epoch, the current model is saved. It allows the user to stop the
+training when he feels satisfied with loss functions. It also allow the user to
+test models even during the training (and, again, stop it even before the last
+epoch).
 
 <h2>EXAMPLES</h2>
 
@@ -99,7 +121,8 @@ not have to be the same ones (e.g. model trained on swimming pools in maps can
 be used for a training on buildings in maps).
 
 <p>
-A model trained on different classes.
+A model trained on different classes (use <em>-e</em> flag to exclude head
+weights).
 <div class="code"><pre>
 ann.maskrcnn.train training_dataset=/home/user/Documents/crops classes=corn,rice logs=/home/user/Documents/logs name=crops model=/home/user/Documents/models/buildings.h5 -e
 </pre></div>
@@ -121,6 +144,7 @@ ann.maskrcnn.train training_dataset=/home/user/Documents/crops classes=corn,rice
 <h2>SEE ALSO</h2>
 
 <em>
+    <a href="maskrcnn.html">Mask R-CNN in GRASS GIS</a>
     <a href="ann.maskrcnn.detect.html">ann.maskrcnn.detect</a>
 </em>
 
