--- a/src/maskrcnn/maskrcnn.html
+++ b/src/maskrcnn/maskrcnn.html
@@ -41,7 +41,10 @@ please install python3 versions.
 
 <p>
 After dependencies are fulfilled, modules can be installed using
-<em>g.extension</em> module.
+<em>g.extension</em> module:  
+<div class="code"><pre>
+g.extension extension=maskrcnn url=path/to/the/maskrcnn/folder
+</pre></div>
 
 <h2>GRASS GIS PATCH</h2>
 
