first self re-reading corrections
missing articles, typos, grammar, non-british english, stylistics

--- a/src/maskrcnn/ann.maskrcnn.detect/ann.maskrcnn.detect.html
+++ b/src/maskrcnn/ann.maskrcnn.detect/ann.maskrcnn.detect.html
@@ -1,6 +1,6 @@
 <h2>DESCRIPTION</h2>
 
-<em>ann.maskrcnn.detect</em> allows user to use a Mask R-CNN model to detect
+<em>ann.maskrcnn.detect</em> allows the user to use a Mask R-CNN model to detect
 features in georeferenced files and extract them either as areas or points.
 The module creates a separate map for each class.
 
