--- a/src/maskrcnn/i.ann.maskrcnn.detect/i.ann.maskrcnn.detect.html
+++ b/src/maskrcnn/i.ann.maskrcnn.detect/i.ann.maskrcnn.detect.html
@@ -1,6 +1,6 @@
 <h2>DESCRIPTION</h2>
 
-<em>ann.maskrcnn.detect</em> allows the user to use a Mask R-CNN model to
+<em>i.ann.maskrcnn.detect</em> allows the user to use a Mask R-CNN model to
 detect features in GRASS GIS raster maps or georeferenced files and extract
 them either as areas or points. The module creates a separate map for each
 class.
@@ -25,7 +25,7 @@ finds it through this parameter.
 When detecting, you can use new names of classes. Classes in the model are not
 referenced by their name, but by their order. It means that if the model was
 trained with classes <em>corn,rice</em> and you use
-<em>ann.maskrcnn.detect</em> with classes <em>zea,oryza</em>, zea areas will
+<em>i.ann.maskrcnn.detect</em> with classes <em>zea,oryza</em>, zea areas will
 present areas detected as corn and oryza areas will present areas detected as
 rice.
 
@@ -41,41 +41,41 @@ If the external file is georeferenced externally (by a worldfile or an
 One map imported in GRASS GIS:
 
 <div class="code"><pre>
-ann.maskrcnn.detect band1=map1.red band2=map1.green band3=map1.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5
+i.ann.maskrcnn.detect band1=map1.red band2=map1.green band3=map1.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5
 </pre></div>
 
 <p>
 Two maps (map1, map2) imported in GRASS GIS:
 
 <div class="code"><pre>
-ann.maskrcnn.detect band1=map1.red,map2.red band2=map1.green,map2.green band3=map1.blue,map2.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5
+i.ann.maskrcnn.detect band1=map1.red,map2.red band2=map1.green,map2.green band3=map1.blue,map2.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5
 </pre></div>
 
 <p>
 External files, the georeferencing is internal (GeoTIFF):
 
 <div class="code"><pre>
-ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 images_format=tif
+i.ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 images_format=tif
 </pre></div>
 
 <p>
 External files, the georeferencing is external:
 
 <div class="code"><pre>
-ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 images_format=png -e
+i.ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 images_format=png -e
 </pre></div>
 
 <h3>Detect cottages and plattenbaus and import them as points</h3>
 
 <div class="code"><pre>
-ann.maskrcnn.detect band1=map1.red band2=map1.green band3=map1.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 output_type=point
+i.ann.maskrcnn.detect band1=map1.red band2=map1.green band3=map1.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 output_type=point
 </pre></div>
 
 <h2>SEE ALSO</h2>
 
 <em>
     <a href="maskrcnn.html">Mask R-CNN in GRASS GIS</a>
-    <a href="ann.maskrcnn.train.html">ann.maskrcnn.train</a>
+    <a href="i.ann.maskrcnn.train.html">i.ann.maskrcnn.train</a>
 </em>
 
 <h2>AUTHORS</h2>
